--- a/dev/static/styles/styles.scss
+++ b/dev/static/styles/styles.scss
@@ -46,6 +46,7 @@ body {
   line-height: 1.5;
   background-color: $white;
   position: relative;
+  scrollbar-gutter: stable both-edges;
 }
 
 *,
